<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".register"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/CBServiceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif"
        android:shadowColor="#40000000"
        android:shadowDx="0"
        android:shadowDy="9"
        android:shadowRadius="4"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/backColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/name"
        android:textColor="@color/backColor"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:autofillHints="name"
        android:background="@drawable/fields"
        android:ems="10"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CBServiceLabel" />

    <TextView
        android:id="@+id/phoneNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/phone_number"
        android:textColor="@color/backColor"
        app:layout_constraintBottom_toTopOf="@+id/phoneNumber"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="phone"
        android:background="@drawable/fields"
        android:ems="10"
        android:hint="@string/phone_mask"
        android:inputType="phone"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toStartOf="@id/joinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/codeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/codeLabel"
        android:textColor="@color/backColor"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/code"
        app:layout_constraintStart_toStartOf="parent" />
    <EditText
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="code"
        android:background="@drawable/fields"
        android:hint="@string/codeMask"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@id/joinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/pass"
        android:textColor="@color/backColor"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="password"
        android:background="@drawable/fields"
        android:ems="10"
        android:hint="@string/pass_mask"
        android:inputType="textPassword"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/email"
        android:textColor="@color/backColor"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="email"
        android:background="@drawable/fields"
        android:ems="10"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />


    <Button
        android:id="@+id/joinButton"
        android:layout_width="100sp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/notenabledbutton"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/code"
        android:textColor="@color/inactiveColor"
        android:textSize="12sp"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />
    

    <EditText
        android:id="@+id/editText"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:autofillHints="username"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/resend"
        android:layout_width="100sp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/whitebuttonstyle"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/resend"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:translationZ="4dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/backToAuthButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/log"
        android:textColor="@color/backColor"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/notenabledbutton"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/register"
        android:textColor="@color/inactiveColor"
        android:textSize="18sp"
        android:translationZ="4dp"
        android:enabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

</androidx.constraintlayout.widget.ConstraintLayout>