<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context=".add_cashbox"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/storeName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/storeName_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/storeName"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/storeName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="address"
        android:background="@drawable/spinner_inactive"
        android:hint="@string/storeName_hint"
        android:inputType="text"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cashboxName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/cashbox_name_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/cashboxName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/cashboxName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="address"
        android:background="@drawable/fields2_inactive"
        android:hint="@string/cashbox_name_hint"
        android:inputType="text"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeName" />



    <TextView
        android:id="@+id/model_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/model_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/model"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/model"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/fields2_inactive"
        android:hint="@string/select_model"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cashboxName" />

    <TextView
        android:id="@+id/factory_number_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/factory_number_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/factory_number"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/factory_number"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="number"
        android:background="@drawable/fields2_inactive"
        android:hint="@string/factory_number_hint"
        android:inputType="phone"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/model" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/notenabledbutton"
        android:enabled="false"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save"
        android:textColor="@color/inactiveColor"
        android:textSize="18sp"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressComment" />

</androidx.constraintlayout.widget.ConstraintLayout>