<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backColor"
    tools:context=".AddStore"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <TextView
        android:id="@+id/storeName_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/storeName_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/storeName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/storeName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="address"
        android:background="@drawable/fields2_inactive"
        android:hint="@string/storeName_hint"
        android:inputType="textPostalAddress"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/region_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/region_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/region"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/region"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/spinner_inactive"
        android:prompt="@string/select_hint"
        android:spinnerMode="dropdown"
        android:theme="@style/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/storeName" />

    <TextView
        android:id="@+id/city_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/city_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/spinner_inactive"
        android:spinnerMode="dropdown"
        android:theme="@style/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/region" />

    <TextView
        android:id="@+id/address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/address_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:autofillHints="address"
        android:background="@drawable/fields2_inactive"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city" />

    <TextView
        android:id="@+id/addressComment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/addressComment_label"
        android:textColor="@color/inactiveColor"
        app:layout_constraintBottom_toTopOf="@+id/addressComment"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addressComment"
        android:layout_width="0dp"
        android:minHeight="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autofillHints="text"
        android:gravity="top|left"
        android:scrollbars="vertical"
        android:background="@drawable/multiline_inactive"
        android:hint="@string/addressComment_hint"
        android:inputType="textMultiLine"
        android:textColor="@color/textColor"
        android:minLines="1"
        android:lines="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/notenabledbutton"
        android:enabled="false"
        android:elevation="3dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save"
        android:textColor="@color/inactiveColor"
        android:textSize="18sp"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressComment" />


</androidx.constraintlayout.widget.ConstraintLayout>